# 1024-trading-program

./: .gitignore  CLEAN-REFACTOR-COMPLETE.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYED-TO-1024CHAIN.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-ISSUE.md  DEPLOYMENT-SUCCESS-FINAL.md  DEPLOYMENT-SUCCESS.md  DEVNET-DEPLOYMENT-GUIDE.md  FINAL-REPORT.md  FINAL-STATUS.md  INTEGRATION-COMPLETE.md  INTEGRATION-STATUS.md  LICENSE  PHASE-2-1-COMPLETE-CLEAN.md  PHASE-2-1-COMPLETE-FINAL.md  PHASE-2-1-COMPLETE.md  PHASE-2-1-FINAL-SUMMARY.md  PHASE-2-1-MVP-COMPLETE.md  PROGRESS.md  PROJECT-STATUS.md  PROJECT-TREE.md  QUICK-START.md  README-FINAL.md  README.md  REFACTORED-CLEAN.md  TESTING.md  program-id.txt
client-examples/: initialize_vault.rs
docs/: 1024-CORE-INTEGRATION.md
examples/: benchmark.rs  e2e_test.rs  initialize.rs
scripts/: deploy.sh
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: liquidation_tests.rs  lock_unlock_tests.rs  smart_hedge_tests.rs
